--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic|Playfair+Display:400,700&subset=latin,cyrillic">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +9,7 @@
 </head>
 <body>
     <h1>Capibara ?</h1>
-    <p align="center">Капибара (Hydrochoerus hydrochaeris) - гигантский морской грызун, обитающий в Южной Америке.
+    <p align="center">Капибара1 (Hydrochoerus hydrochaeris) - гигантский морской грызун, обитающий в Южной Америке.
 Многие считают, что это результат безумных экспериментов с участием кошачьих и, что поразительно, валлаби.
  Это самый крупный из ныне живущих грызунов в мире.</p>
  <video width="400" height="300" controls="controls" poster="1.jpg">
